# cyd_battery_tester

./: .code-workspace  .flake8  .gitignore  .gitmodules  Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: continuous_integration_pipeline.yml
esp32/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
esp32/main/: CMakeLists.txt  battery.c  battery.h  file_arrow_left_right.c  home_circle.c  idf_component.yml  lcd.c  lock_remove.c  main.c  touch.c  touch.h  user_interface.c  user_interface.h
python/: cyd-battery-tester-firmware-update.py  cyd-battery-tester-firmware-update.spec  requirements.txt
